--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,13 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 thiserror = "1"
 
+base64 = { version = "0.22" }
+chrono = { version = "0.4", features = ["serde"] }
+reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+urlencoding = "2"
+
 [dev-dependencies]
 assert_cmd = "2"
 predicates = "3"
+wiremock = "0.6"
