phase b: improve case header output (filename + it description)

--- a/tests/feature/stalwart/cases/existing_big_attachment.yaml
+++ b/tests/feature/stalwart/cases/existing_big_attachment.yaml
@@ -1,4 +1,5 @@
 id: existing_big_attachment
+it: "reads an externally injected big HTML + big attachment message (truncation + download)"
 requiresFresh: true
 
 seed:
