--- a/tests/feature/stalwart/cases/labels_smoke.yaml
+++ b/tests/feature/stalwart/cases/labels_smoke.yaml
@@ -12,7 +12,6 @@ env:
   XIN_BASE_URL: http://127.0.0.1:39090
   XIN_BASIC_USER: alice
   XIN_BASIC_PASS: alice-pass
-  XIN_DEBUG_RESOLUTION: "true"
 
 steps:
   - name: list-initial
@@ -41,6 +40,7 @@ steps:
   - name: get-created
     xin:
       args:
+        - --verbose
         - labels
         - get
         - ${mailboxId}
