--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ chrono = { version = "0.4", features = ["serde"] }
 jmap-client = { version = "0.4", default-features = false, features = ["async"] }
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 url = "2"
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
 
 [dev-dependencies]
 assert_cmd = "2"
