--- a/tests/feature/stalwart/cases/history_smoke.yaml
+++ b/tests/feature/stalwart/cases/history_smoke.yaml
@@ -81,5 +81,5 @@ steps:
     expect:
       - path: /data/newState
         exists: true
-      - path: /data/changes/created/0
-        equals: ${newEmailId}
+      - path: /data/changes/created
+        contains: ${newEmailId}
