--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ thiserror = "1"
 base64 = { version = "0.22" }
 chrono = { version = "0.4", features = ["serde"] }
 jmap-client = { version = "0.4", default-features = false, features = ["async"] }
-tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
 url = "2"
 reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
 
