--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,24 +34,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Cache cargo
-        uses: Swatinem/rust-cache@v2
-
       - name: Set up Docker
-        run: sudo apt-get update && sudo apt-get install -y docker.io docker-compose
-
-      - name: Build xin
-        run: cargo build --release
+        uses: docker/setup-buildx-action@v3
 
       - name: Start Stalwart
         working-directory: tests/feature/stalwart
         run: |
-          chmod +x scripts/up.sh
-          ./scripts/up.sh
-          sleep 5
+          docker compose up -d
+          sleep 10
+
+      - name: Build xin
+        run: cargo build --release
 
       - name: Run smoke test
         working-directory: tests/feature/stalwart
@@ -59,4 +52,4 @@ jobs:
 
       - name: Stop Stalwart
         working-directory: tests/feature/stalwart
-        run: ./scripts/down.sh || true
+        run: docker compose down || true
