Fix smoke test: use debug build (check.sh expects debug)
Co-authored-by: onevclaw <onevclaw@onevcat.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
           sleep 10
 
       - name: Build xin
-        run: cargo build --release
+        run: cargo build
 
       - name: Run smoke test
         working-directory: tests/feature/stalwart
