chore: remove unusable draft update helper
Co-authored-by: onevclaw <onevclaw@onevcat.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,10 @@ jobs:
         # xin-feature manages Stalwart lifecycle itself (up/down + optional fresh resets) based on cases.
         run: cargo run --bin xin-feature -- --fresh --case-dir tests/feature/stalwart/cases --all
 
+      - name: Watch e2e (Stalwart)
+        working-directory: tests/feature/stalwart
+        run: ./scripts/watch_check.sh
+
       - name: Dump Stalwart logs (on failure)
         if: failure()
         run: docker logs xin-stalwart || true
