fix(jmap): use our fork of jmap-client with null-patch fix
- Cargo.toml: patch to use onevcat/jmap-client fork (PR #18 pending upstream)
- backend.rs: revert manual JSON construction; now uses builder API
  - jmap-client fork now serializes mailbox_id(keyword, false) as null
  - also checks Email/set notUpdated for real success/failure

Co-authored-by: onevclaw <onevclaw@onevcat.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,7 @@ assert_cmd = "2"
 predicates = "3"
 tempfile = "3"
 wiremock = "0.6"
+
+[patch.crates-io]
+# Use our fork while upstream PR is pending.
+jmap-client = { git = "https://github.com/onevcat/jmap-client", rev = "019ef8e" }
